# Humanoid_Robotics_Book

./: README.md
.gemini/: settings.json
.github/workflows/: deploy_backend.yml
.specify/memory/: constitution.md
backend/: fly.toml  ingestion_script.py  pyproject.toml  requirements.txt  test_env.py  test_qdrant_connection.py
backend/app/: main.py
backend/app/models/: api_models.py
backend/app/services/: chunking.py  cohere_embed.py  llm_generation.py  qdrant.py
backend/tests/: test_api.py  test_ingestion.py  test_services.py
history/prompts/001-define-module-specs/: 134094342001157359-build-docusaurus-book.green.prompt.md  134094345267216009-deploy-docusaurus-book-failed.green.prompt.md  1701763740123-create-spec-for-robotics-book.spec.prompt.md  1701763800123-create-spec-for-robotics-book-retry.spec.prompt.md  1701763900123-create-technical-plan.plan.prompt.md
history/prompts/002-docusaurus-ui/: 134095610719084251-modern-interactive-docusaurus-interface.spec.prompt.md  134095616476519626-implementation-plan-docusaurus-ui.plan.prompt.md  134095617724934399-generate-tasks-docusaurus-ui.tasks.prompt.md  134095622322776656-implement-docusaurus-ui-update.green.prompt.md
history/prompts/003-rag-chatbot/: 134095957215575975-integrated-rag-chatbot.spec.prompt.md  (+3 more)
humanoid-robotics-book/: .gitignore  docusaurus.config.ts
specs/002-docusaurus-ui/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-rag-chatbot/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/004-urdu-translation/: spec.md
(+10 files in other folders)
